fixed margin top issue of cta button on narrow screens

--- a/css/index.css
+++ b/css/index.css
@@ -291,7 +291,6 @@ footer div {
 @media screen and (max-width:500px) {
   .jumbotron .jumbo-wrap .jumbo-text-wrap {
     order: 2;
-    margin-top: -23rem;
     text-align: center;
     width: 100%;
   }
@@ -306,6 +305,11 @@ footer div {
   line-height: 5.2rem;
   text-shadow: 0rem 0.5rem 0.4rem rgba(0, 0, 0, 0.56);
   color: rgba(255, 255, 255, 0.8);
+}
+@media screen and (max-width:500px) {
+  .jumbotron .jumbo-wrap .jumbo-text-wrap .jumbo-text {
+    margin-top: 0px;
+  }
 }
 .jumbotron .jumbo-wrap .jumbo-text-wrap .jumbo-text span {
   color: #3DE39C;
@@ -389,7 +393,7 @@ footer div {
   width: 25rem;
   height: 5rem;
   box-shadow: 0px 7px 4px rgba(0, 0, 0, 0.9);
-  margin-top: 15rem;
+  margin-top: 7rem;
   background: #3DE39C;
   border-radius: 9px;
   font-weight: 500;
@@ -401,7 +405,7 @@ footer div {
 }
 @media screen and (max-width:500px) {
   .jumbotron .jumbo-cta .jumbo-button button {
-    margin-top: 15rem;
+    margin-top: 12rem;
   }
 }
 .features {
