--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,7 +22,6 @@
       .jumbo-text-wrap {  
           @media @phone {
               order: 2;
-              margin-top: -23rem;
               text-align: center;
               width: 100%;
           }
@@ -36,6 +35,10 @@
               line-height: 5.2rem;
               text-shadow: 0rem 0.5rem 0.4rem rgba(0, 0, 0, 0.56);
               color: rgba(255, 255, 255, 0.8);
+
+              @media @phone {
+                  margin-top: 0px;
+              }
       
 
               span {
@@ -133,7 +136,7 @@
             width: 25rem;
             height: 5.0rem;
             box-shadow: 0px 7px 4px rgba(0, 0, 0, 0.90);
-            margin-top: 15rem;
+            margin-top: 7rem;
             background:@mint-green;
             border-radius: 9px;
             font-weight: 500;
@@ -146,7 +149,7 @@
             
   
             @media @phone {
-               margin-top: 15rem;
+               margin-top: 12rem;
             }
         }
 
